# C_Projects

./: CMakeLists.txt
1 Data Types/: CMakeLists.txt  main.cpp
11 Networking/: CMakeLists.txt  main.cpp  passwords.txt
11 Networking/Header Files/: BruteForce.h
11 Networking/Source Files/: BruteForce.cpp
3 Functions/: CMakeLists.txt  main.cpp
3 Functions/Header Files/: isPrime.h
3 Functions/Source Files/: isPrime.cpp
4 Shopping Cart Program/: CMakeLists.txt
4 Shopping Cart Program/Source Files/: Item.cpp  ShoppingCart.cpp  Utility.cpp
7 Object Oriented Programming/: CMakeLists.txt  main.cpp
7 Object Oriented Programming/Header Files/: Site.h
7 Object Oriented Programming/Source Files/: Site.cpp
7 Replicating the Vector Class/: ReadMe.txt  main.cpp
7 Replicating the Vector Class/Header Files/: Dynamic_Int_Array_Class.h
7 School Registration Program/: ReadMe.txt  main.cpp
7 School Registration Program/Header Files/: Course.h  School.h  Student.h  Utils.h
7 School Registration Program/Source Files/: Course.cpp
7 School Registration Program/Test Data/: courses.txt
8 Encryption/: CMakeLists.txt  main.cpp
8 Prime Number Detection/: CMakeLists.txt  main.cpp
8 Search Algorithm Speed/: CMakeLists.txt  main.cpp
8 Search Algorithm Speed/Source Files/: SearchAlgorithms.cpp  Utility.cpp
8 Search Algorithms/: CMakeLists.txt
8 Search Algorithms/Header Files/: SearchAlgorithms.h
8 Search Algorithms/Source Files/: SearchAlgorithms.cpp
8 Sort Algorithm Speed/: CMakeLists.txt  ReadMe.txt  main.cpp
8 Sort Algorithm Speed/Header Files/: BubbleSortAlgorithm.h  InsertionSortAlgorithm.h  QuickSortAlgorithm.h  SelectionSortAlgorithm.h  SortAlgorithm.h  Utility.h
8 Sort Algorithm Speed/Source Files/: BubbleSortAlgorithm.cpp  InsertionSortAlgorithm.cpp  QuickSortAlgorithm.cpp  SelectionSortAlgorithm.cpp  SortAlgorithm.cpp  Utility.cpp
8 Sort Algorithm Speed/Test Data 1/: Nearly Sorted.txt  Random Unique.txt  Sorted Reverse.txt
8 Sort Algorithms/: main.cpp
8 Sort Algorithms/Header Files/: SortAlgorithms.h
8 Sort Algorithms/Source Files/: SortAlgorithms.cpp
Algorithms Search/: CMakeLists.txt  main.cpp
Algorithms Search/Header Files/: SearchAlgorithms.h
Algorithms Sort/: CMakeLists.txt  main.cpp
Algorithms Sort/Source Files/: SortAlgorithms.cpp
Measuring Search Algorithm Speed/: CMakeLists.txt  main.cpp
Measuring Search Algorithm Speed/Source Files/: SearchAlgorithms.cpp
Measuring Sort Algorithm Speed/: CMakeLists.txt  main.cpp
Measuring Sort Algorithm Speed/Header Files/: SortAlgorithms.h  Utility.h
Measuring Sort Algorithm Speed/Source Files/: SortAlgorithms.cpp  Utility.cpp
Replicating the Vector Class/: CMakeLists.txt  main.cpp
Replicating the Vector Class/Source Files/: Dynamic_Int_Array_Class.cpp
School Registration Program/: CMakeLists.txt  main.cpp
School Registration Program/Header Files/: Course.h  Student.h
School Registration Program/Source Files/: School.cpp  Student.cpp  Utils.cpp
School Registration Program/Test Data/: students.txt
Search Algorithm Speed/: ReadMe.txt  main.cpp
Search Algorithm Speed/Header Files/: SearchAlgorithms.h
Shopping Cart Program/: ReadMe .txt  main.cpp
Shopping Cart Program/Header Files/: Item.h  ShoppingCart.h  Utility.h
Sort Algorithm Speed/: CMakeLists.txt  ReadMe.txt  main.cpp
Sort Algorithm Speed/Header Files/: SortAlgorithms.h  Utility.h
Sort Algorithm Speed/Source Files/: SortAlgorithms.cpp
