cmake_minimum_required(VERSION 3.27)
project(CProjects)

add_subdirectory("7 Replicating the Vector Class")
add_subdirectory("7 School Registration Program")
add_subdirectory("4 Shopping Cart Program")
add_subdirectory("8 Search Algorithms")
add_subdirectory("8 Sort Algorithms")
add_subdirectory("8 Search Algorithm Speed")
add_subdirectory("8 Sort Algorithm Speed")
add_subdirectory("1 Data Types")